[tool.poetry]
name = "arcade"
version = "0.1.0"
description = ""
authors = ["nerdimite <bhavesh.laddagiri1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.70.0"
ipykernel = "^6.29.5"
boto3 = "^1.37.28"
fastapi = "^0.115.12"
uvicorn = "^0.28.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.1"
rich = "^14.0.0"
tenacity = "^9.1.2"
jinja2 = "^3.1.6"
dynamodb-json = "^1.4.2"
pytz = "^2025.2"

[tool.poetry.scripts]
dev = "arcade.main:dev"
start = "arcade.main:prod"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
